2009-01-25 jps
* Renamed erp5_web_default_theme to clarify the fact that there is no default theme in erp5_web and that erp5_web is a framework to build Web sites based on ERP5.

2008-11-13 yusei
* Start to develop version 5.4.

2008-10-29 yusei
* Update xml format.

2008-10-29 yusei
* Publication Section fields are now translatable.

2008-10-14 yusei
* Start to develop version 5.3.

2008-09-08 yusei
* Added web mode version of Base_doLanguage.

2008-09-08 yusei
* Use Base_translateString instead of translate.

2008-09-07 yusei
* Update English messages.

2008-09-04 yusei
* Update English messages.

2008-09-04 yusei
* Correct action title on Web Section.

2008-09-03 yusei
* Remove text which is not suitable for translation.

2008-08-29 yusei
* Correct message text.

2008-08-28 yusei
* Fixed text in WebSite_viewContributePropertyRenderer.

2008-07-15 rafael
* Updated WebSection_zGetDocumentValueList to support more params and fix some issues.

2008-07-06 yo
* Add effective date into Web Page.

2008-07-06 yo
* Use getDocumentValue instead of restrictedTraverse again, as the acquisition problem has been fixed in the Product.

2008-07-01
* Fix WebSection_viewInlinePageRenderer. Prevent to get a non document object. Thank you for Thomas Nouret.

2008-06-28 yo
* Use restrictedTraverse instead of getDocumentValue in WebSection_viewInlinePageRenderer, because we need an appropriate acquisition wrapper here.

2008-06-28 yo
* Add a standard method for string substitutions.

2008-06-27 yusei
* Start to develop version 5.2.

2008-06-26 yusei
* Revise version to 5.1.

2008-06-26 yo
* Add a skin selection name field into Web Section.

2008-06-13 ivan
* Enable Role Definitions for Web Site and Web Section. Show workflow state for Web Site and Web Section

2008-06-12 yo
* Refactor WebSection_getDocumentValueList, so that it can be mostly shared with km. Now this script relies on a custom Z SQL Method to generate a good query.

2008-06-11 yo