@@ -1,0 +1,202 @@
+<?xml version="1.0"?>
+<ZopeData>
+  <record id="1" aka="AAAAAAAAAAE=">
+    <pickle>
+      <tuple>
+        <global name="PythonScript" module="Products.PythonScripts.PythonScript"/>
+        <tuple/>
+      </tuple>
+    </pickle>
+    <pickle>
+      <dictionary>
+        <item>
+            <key> <string>Script_magic</string> </key>
+            <value> <int>3</int> </value>
+        </item>
+        <item>
+            <key> <string>_bind_names</string> </key>
+            <value>
+              <object>
+                <klass>
+                  <global name="NameAssignments" module="Shared.DC.Scripts.Bindings"/>
+                </klass>
+                <tuple/>
+                <state>
+                  <dictionary>
+                    <item>
+                        <key> <string>_asgns</string> </key>
+                        <value>
+                          <dictionary>
+                            <item>
+                                <key> <string>name_container</string> </key>
+                                <value> <string>container</string> </value>
+                            </item>
+                            <item>
+                                <key> <string>name_context</string> </key>
+                                <value> <string>context</string> </value>
+                            </item>
+                            <item>
+                                <key> <string>name_m_self</string> </key>
+                                <value> <string>script</string> </value>
+                            </item>
+                            <item>
+                                <key> <string>name_subpath</string> </key>
+                                <value> <string>traverse_subpath</string> </value>
+                            </item>
+                          </dictionary>
+                        </value>
+                    </item>
+                  </dictionary>
+                </state>
+              </object>
+            </value>
+        </item>
+        <item>
+            <key> <string>_body</string> </key>
+            <value> <string>""" \n
+    Generate current document\'s information structure needed to be rendered \n
+    by web widget Document_viewPopupTemplate.\n
+"""\n
+from zExceptions import Unauthorized\n
+\n
+translateString = context.Base_translateString\n
+doc_info = {}\n
+owner_list = context.Base_getOwnerInfoList()\n
+doc_info[\'owner\'] = \'; \'.join([owner[\'title\'] for owner in owner_list])\n
+\n
+if context.getModificationDate() is not None:\n
+  doc_info[\'modification_date\'] = context.WebSite_getFancyRelativeDate(context.getModificationDate())\n
+  \n
+publication_date = context.Document_getLastWorkflowStateEntryDate(state=(\'public,\'),\n
+                                                                  state_name=\'validation_state\')\n
+if publication_date is not None:\n
+  doc_info[\'publication_date\'] = context.WebSite_getFancyRelativeDate(publication_date)\n
+  \n
+release_date = context.Document_getLastWorkflowStateEntryDate(state=(\'released,\'),\n
+                                                              state_name=\'validation_state\')\n
+if release_date is not None:\n
+  doc_info[\'release_date\'] = context.WebSite_getFancyRelativeDate(release_date)\n
+  \n
+try:\n
+  doc_info[\'status\'] = context.getTranslatedValidationStateTitle() or \'\'\n
+except AttributeError:\n
+  doc_info[\'status\'] = \'\'\n
+  \n
+try:\n
+  doc_info[\'group\'] = context.getGroupTitle() or \'\'\n
+except AttributeError:\n
+  doc_info[\'group\'] = \'\'\n
+  \n
+try:\n
+  doc_info[\'project\'] = context.getFollowUpTitle(checked_permission=\'View\') or \'\'\n
+except (AttributeError, Unauthorized):\n
+  doc_info[\'project\'] = \'\'\n
+\n
+try:\n
+  doc_info[\'language\'] = context.getLanguage() or \'\'\n
+except AttributeError:\n
+  pass\n
+\n
+# add web sections document belongs too\n
+if website is None:\n
+  website = context.getWebSiteValue()  \n
+sections = []\n
+for websection in website.getWebSectionValueList(context):\n
+  sections.append({\'title\': websection.getCompactTranslatedTitle(),\n
+                   \'url\': websection.absolute_url()})\n
+doc_info[\'sections\'] = sections\n
+\n
+return context.Document_viewPopupTemplate(**doc_info)\n
+</string> </value>
+        </item>
+        <item>
+            <key> <string>_code</string> </key>
+            <value>
+              <none/>
+            </value>
+        </item>
+        <item>
+            <key> <string>_params</string> </key>
+            <value> <string>website=None</string> </value>
+        </item>
+        <item>
+            <key> <string>_proxy_roles</string> </key>
+            <value>
+              <tuple/>
+            </value>
+        </item>
+        <item>
+            <key> <string>errors</string> </key>
+            <value>
+              <tuple/>
+            </value>
+        </item>
+        <item>
+            <key> <string>func_code</string> </key>
+            <value>
+              <object>
+                <klass>
+                  <global name="FuncCode" module="Shared.DC.Scripts.Signature"/>
+                </klass>
+                <tuple/>
+                <state>
+                  <dictionary>
+                    <item>
+                        <key> <string>co_argcount</string> </key>
+                        <value> <int>1</int> </value>
+                    </item>
+                    <item>
+                        <key> <string>co_varnames</string> </key>
+                        <value>
+                          <tuple>
+                            <string>website</string>
+                            <string>zExceptions</string>
+                            <string>Unauthorized</string>
+                            <string>_getattr_</string>
+                            <string>context</string>
+                            <string>translateString</string>
+                            <string>doc_info</string>
+                            <string>owner_list</string>
+                            <string>append</string>
+                            <string>$append0</string>
+                            <string>_getiter_</string>
+                            <string>owner</string>
+                            <string>_getitem_</string>
+                            <string>_write_</string>
+                            <string>None</string>
+                            <string>publication_date</string>
+                            <string>release_date</string>
+                            <string>AttributeError</string>
+                            <string>sections</string>
+                            <string>websection</string>
+                            <string>_apply_</string>
+                          </tuple>
+                        </value>
+                    </item>
+                  </dictionary>
+                </state>
+              </object>
+            </value>
+        </item>
+        <item>
+            <key> <string>func_defaults</string> </key>
+            <value>
+              <tuple>
+                <none/>
+              </tuple>
+            </value>
+        </item>
+        <item>
+            <key> <string>id</string> </key>
+            <value> <string>Document_getPopupInfo</string> </value>
+        </item>
+        <item>
+            <key> <string>warnings</string> </key>
+            <value>
+              <tuple/>
+            </value>
+        </item>
+      </dictionary>
+    </pickle>
+  </record>
+</ZopeData>
