@@ -1,3 +1,7 @@
+2009-03-24 fabien
+* move some scripts from km to here. This scripts are usefull to display listbox search style.
+* some method need to be renamed after been moved so change the name everywhere
+
 2009-01-25 jps
 * Renamed erp5_web_default_theme to clarify the fact that there is no default theme in erp5_web and that erp5_web is a framework to build Web sites based on ERP5.
 
